# fastapi-image-site

./: .gitignore  README.md  alembic.ini  constants.py  docker-compose.yml  main.py  pyproject.toml  test.ipynb
app/: models.py
libs/: common.py  db.py  dependencies.py  html.py  password.py  upload.py
migrations/: env.py
migrations/versions/: 0d7d8634930c_user_like_artwork_table.py  25b34bc28eb6_initial_model.py  2dd66c6361b3_comment_table.py  66462fcf5309_user_test.py  6c5747afff20_fix_wrong_base_for_artwork.py  7e3b2fbc8026_user_test_string.py  810876afd61d_rename_like_table_to_favorite.py  e4a3cce64289_add_favorite_timestamp.py  e4e56b317030_artwork_timestamp.py  fda898ce048f_user_timestamp.py
routes/: artworks.py  dev.py  user.py
routes/artworks/: __init__.py  apis.py  gallery_apis.py  upload_apis.py  view.py
