[tool.poetry]
name = "fastapi-image-site"
version = "0.1.0"
description = ""
authors = ["Road <rod8711@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
sqlmodel = "^0.0.22"
itsdangerous = "^2.2.0"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
