[tool.poetry]
name = "fastapi-image-site"
version = "0.1.0"
description = ""
authors = ["Road <rod8711@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlmodel = "^0.0.22"
itsdangerous = "^2.2.0"
python-multipart = "^0.0.12"
alembic = "^1.13.3"
pillow = "^11.0.0"
psycopg2 = "^2.9.10"
htpy = "^24.9.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["*.ipynb"]